# RheoCell

./: .gitignore  CMakeLists.txt  README.md  TODO  TODO.txt  input
examples/: external.conf  input  test.top  topology.top
scripts/: .hole_strain_process.py.swp  LCS.py  LCS_traj.py  MSD_calc.py  VoronoiNeighbors.py  analyse.sh  calcAvgEnergy.cpp  calcAvgForce.py  calcAvgInterface.py  calcAvgNematic.py  calcAvgPolar.py  calcAvgShape.py  calcAvgVelocity.py  calcAvgVoronoi.py  fieldFrames.sh  field_force_properties.py  field_nematic_defects_properties.py  field_nematic_properties.py  field_nematic_trajectory_properties.py  field_nematic_velocity_properties.py  field_stress_properties.py  field_velocity_properties.py  field_velocity_trajectory_properties.py  forceField.py  hole_dynamics.py  hole_strain_process.py  makeMovie.sh  mapRCtoJSON.py  nematicField.py  nematic_shape_Field.py  nematic_stress_Field.py  nematic_vorticity_Field.py  processPython.py  read_conf.py  samplesCalc.sh  samplesCalc_1.sh  samplesCalc_2.sh  strain_histogram.py  stressField.py  velocityField.py  (+4 more)
scripts/plot/: animation.py  archive.py  pAtic.py  plot.py
scripts/plot-factory/: annulus.sh  annulus_velocity.py  dipolar.py  directors.sh  force_density.py  make_movies.py  make_movies.sh  nbr_colour.py  nbr_hist.py  p_colour.py  plot-activity.py  plot-cell-multiple.py  plot-cell-nbr.py  plot-cell.py  plot-cells-chem.py  plot-cells-directors.py  plot-chem.py  plot-force-distribution.py  plot-grad_phi.py  plot-hexatic.py  plot-p_atic.py  plot-polar-force-dist.py  plot-psi6.py  plot-qs.py  plot-stress-defects.py  plot-stress.py  plot-tetratic.py  plot-voronoi.py  strip_velocity.py  test.py  theta_colour.py  velocity-vorticity.py  voronoi.py  vorticity_length.py
scripts/plot/archive_base/: archive.py
src/: CMakeLists.txt  analyser.cpp  confGenerator.cpp  defs.h  rheoCell.cpp
src/Backends/: BackendFactory.cpp  BackendFactory.h  FDBackend.cpp  FDBackend.h  FD_CHBackend.cpp  FD_CHBackend.h  FD_CPUBackend.cpp  FD_CPUBackend.h  SimBackend.cpp  SimBackend.h
src/Boxes/: BaseBox.cpp  BaseBox.h  BoxFactory.cpp  BoxFactory.h  Channel.cpp  Channel.h  CircleWalls.cpp  CircleWalls.h  LeesEdwardsBox.cpp  LeesEdwardsBox.h  LeesEdwardsSquareBox.cpp  LeesEdwardsSquareBox.h  MovingWalls.cpp  MovingWalls.h  OrthogonalBox.cpp  OrthogonalBox.h  SquareBox.cpp  SquareBox.h  SquareWalls.cpp  SquareWalls.h  TriangleWalls.cpp  TriangleWalls.h
src/CUDA/: CUDAForces.h  CUDAUtils.cu  CUDAUtils.h  cuda_defs.h
src/CUDA/Backends/: CUDABaseBackend.cu  CUDABaseBackend.h  CUDA_FD.cuh  CUDA_mixed.cuh  FD_CUDABackend.cu  FD_CUDABackend.h  FD_CUDAMixedBackend.cu  FD_CUDAMixedBackend.h
src/CUDA/Interactions/: CUDABaseInteraction.cu  CUDABaseInteraction.h  CUDAInteractionFactory.cu  CUDAInteractionFactory.h  CUDAWetModel.cu  CUDAWetModel.h  CUDA_WetModel.cuh
src/CUDA/cuda_utils/: CUDABox.h  CUDA_lr_common.cuh  cuda_device_utils.h
src/Fields/: BaseField.cpp  BaseField.h  FieldFactory.cpp  FieldFactory.h  LEBcMultiPhaseField.cpp  LEBcMultiPhaseField.h  MultiPhaseField.cpp  MultiPhaseField.h
src/Forces/: BaseForce.cpp  BaseForce.h  ChannelWalls.cpp  ChannelWalls.h  ForceFactory.cpp  ForceFactory.h  HardWall.cpp  HardWall.h  PoiseuilleFlowChannel.cpp  PoiseuilleFlowChannel.h  ShearFlowChannel.cpp  ShearFlowChannel.h  Stretching.cpp  Stretching.h
src/Interactions/: .WetModel.cpp.swp  ActiveMultiField.cpp  ActiveMultiField.h  ActiveNematic.cpp  ActiveNematic.h  BaseInteraction.cpp  BaseInteraction.h  DifferentialAdhesion.cpp  DifferentialAdhesion.h  GeneralizedWetModel.cpp  GeneralizedWetModel.h  InteractionFactory.cpp  InteractionFactory.h  LEBcActiveNematic.cpp  LEBcActiveNematic.h  LEBcWetModel.cpp  LEBcWetModel.h  SimpleMultiField.cpp  SimpleMultiField.h  WetModel.cpp  WetModel.h  WetPolarModel.cpp  WetPolarModel.h
src/Managers/: GeneratorManager.cpp  GeneratorManager.h  SimManager.cpp  SimManager.h
src/Observables/: BaseObservable.cpp  BaseObservable.h  Configuration.cpp  Configuration.h  ForceField.cpp  ForceField.h  NematicField.cpp  NematicField.h  ObservableFactory.cpp  ObservableFactory.h  ObservableOutput.cpp  ObservableOutput.h  ShapeField.cpp  ShapeField.h  StressField.cpp  StressField.h  ThermodynamicStressField.cpp  ThermodynamicStressField.h  VelocityField.cpp  VelocityField.h
src/Utilities/: ConfigInfo.cpp  ConfigInfo.h  FlattenedConfigInfo.cpp  FlattenedConfigInfo.h  LR_vector.cpp  LR_vector.h  Logger.cpp  Logger.h  RCexception.cpp  RCexception.h  SignalManager.cpp  SignalManager.h  Timings.cpp  Timings.h  Utils.cpp  Utils.h
src/Utilities/parse_input/: parse_input.cpp
